--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main .container {
 }
 .job-card, .story-card, .poll-card ,.comment-card{
     width: 100%;
-    min-width:  100% !important;
+    min-width:  100%;
     position: relative;
     display:flex;
     flex-direction: column;
@@ -207,4 +207,30 @@ main .container {
 
 .link a:hover{
     color: var(--primary-100);
+}
+
+.loader{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader .loader-inner{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid var(--primary-100);
+    border-top-color: var(--bg-200);
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
